--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -11,10 +11,10 @@ $font-size-base: 1rem;
 
 // Colors
 $body-color: $gray;
-$primary:    $blue;
-$success:    $green;
-$info:       $yellow;
-$danger:     $red;
+$primary:    $green;
+$success:    $bold-green;
+$info:       $olive;
+$red:        $red;
 $warning:    $orange;
 
 // Buttons & inputs' radius
