--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,7 +1,6 @@
 <div class="container mt-4">
   <% @recipes.each do |recipe|%>
     <div class="recipe-photo">
-
     </div>
     <div class="recipe-card">
       <h2><%= recipe.title %></h2>
@@ -13,4 +12,5 @@
 <div id="map"
      style="width: 100%; height: 600px;"
      data-markers="<%= @markers.to_json %>"
-     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+     </div>
