--- a/app/views/recipes/_info_window.html.erb
+++ b/app/views/recipes/_info_window.html.erb
@@ -1,3 +1,3 @@
-<h3>supermarket.name</h3>
+<h3><%= supermarket.name %></h3>
 <p><%= supermarket.address %></p>
-<p><%= @supermarket_recipes %></p>
+<p><%= supermarket_recipes %></p>
