--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,24 +1,26 @@
-<div class="container mt-4">
-  <% @recipes.each do |recipe|%>
+<div class="row">
+  <div class="container mt-4 col 12 col-md-8">
+    <% @recipes.each do |recipe|%>
 
-    <div class="recipe-card">
-      <div class="recipe-photo">
-        <% unless recipe.photo.nil? %>
-          <%= cl_image_tag recipe.photo.key, height: 200, width: 300, crop: :fill %>
-        <% else %>
-          <img src="https://res.cloudinary.com/dovh6vnvn/image/upload/v1597150377/Cookclever/placeholder.png" style="width: 100%">
-        <% end %>
+      <div class="recipe-card">
+        <div class="recipe-photo">
+          <% unless recipe.photo.nil? %>
+            <%= cl_image_tag recipe.photo.key, height: 200, width: 300, crop: :fill %>
+          <% else %>
+            <img src="https://res.cloudinary.com/dovh6vnvn/image/upload/v1597150377/Cookclever/placeholder.png" style="width: 100%">
+          <% end %>
+        </div>
+        <h2><%= recipe.title %></h2>
+        <p><%= recipe.supermarket.name %></p>
       </div>
-      <h2><%= recipe.title %></h2>
-      <p><%= recipe.supermarket.name %></p>
-    </div>
-  <% end %>
-</div>
-<br>
-<div id="map"
-  style="width: 100%; height: 600px;"
-  data-markers="<%= @markers.to_json %>"
-  data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+    <% end %>
+  </div>
+  <br>
+  <div id="map" class="col-6 col-md-4"
+    style="width: 100%; height: 600px;"
+    data-markers="<%= @markers.to_json %>"
+    data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
 </div>
 
 
