--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -31,6 +31,9 @@
     display: flex;
     background-color: white;
     align-items: center;
+    .ap-input-icon {
+      display: none;
+    }
   }
 
   .location-marker {
