--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,5 +13,6 @@
 @import "components/index";
 @import "components/banner";
 @import "components/button";
+@import "components/card";
 @import "pages/index";
 @import "pages/home";
