--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -29,39 +29,16 @@
   margin: 0;
  }
 
-
-//  Navbar Home
-
-// .navbar-lewagon {
-//   justify-content: space-between;
-//   background: $info;
-//   opacity: 0.8;
-//   position: absolute;
-//   width: 100vw;
-// }
-
-// .navbar-lewagon .navbar-collapse {
-//   flex-grow: 0;
-// }
-
-// .navbar-lewagon .navbar-brand img {
-//   width: 90px;
-// }
-
-// .navbar-lewagon .add-btn {
-//   border-radius: 25px;
-//   background-color: white;
-//   border: 1px $warning solid;
-//     .nav-item {
-//       color: $warning;
-//     }
-//  }
-
-//  .navbar {
-//    padding: 8px 80px;
-//  }
-
-//  .navbar-brand {
-//   padding: 0;
-//   margin: 0;
-//  }
+.logo-background {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  background-color: white;
+  position: relative;
+  .logoNav {
+    position: absolute;
+    top: -11px;
+    left: -8px;
+    margin-bottom: 8px;
+  }
+}
