--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,85 @@
 // Import page-specific CSS files here.
 @import "home";
+
+.container-main {
+    padding: 0;
+  }
+  
+  .row {
+    width: 100%;
+  }
+  
+  .column {
+    width: 50%;
+  }
+
+
+// Modal
+.modal-header {
+  padding: 0;
+}
+
+.modal-header-image {
+    width: 100%;
+    position: relative;
+    h3 {
+      position: absolute;
+      left: 8px;
+      top: 260px;
+    }
+    .close {
+      position: absolute;
+      right: 5px;
+    }
+    img {
+      width: 100%;
+    }
+  }
+
+  .modal-body {
+    padding: 8px;
+}
+
+  .modal-body-info {
+      width: 100%;
+      height: 30px;
+  }
+
+  .modal-body-info-item {
+    width: 33.3%;
+    padding: 0;
+  }
+
+  #body-info-lower {
+    padding-bottom: 8px;
+    border-bottom: 1px solid lightgrey;
+  }
+
+  .container-ingredients {
+    margin-top: 8px;
+    margin-left: 16px;
+  }
+
+  .recipe-instructions {
+    padding-top: 32px;
+    h5 {
+      text-align: center;
+    }
+  }
+
+  .modal-footer-button {
+    margin: 0 auto;
+    border-radius: 20px;
+    color: white;
+  }
+
+
+// Map
+#map {
+  height: 100vh;
+  position: sticky;
+  top: 0px;
+  margin-top: 67px;
+  margin-left: 30px;
+  width: 100%;
+}
