--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,17 +12,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <li class="nav-item active">
-          <%= link_to "Home", "#", class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Messages", "#", class: "nav-link" %>
-        </li>
+        <%= link_to basket_path(@basket) do %>
+          <li class="basket-icon">
+          <i class="fas fa-shopping-cart"></i>
+          </li>
+          <% end %>
         <li class="nav-item dropdown">
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <%= image_tag "https://kitt.lewagon.com/placeholder/users/LSchemuth", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Action", "#", class: "dropdown-item" %>
-            <%= link_to "Another action", "#", class: "dropdown-item" %>
+            <%= link_to "My Profile", "#", class: "dropdown-item" %>
+            <%= link_to "Recent orders", "baskets_path", class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
@@ -41,26 +40,26 @@
   <div class="container">
     <div class="banner-wrapper">
       <%= image_tag "logo.svg", class: "logoHome" %>
-  
+
       <%= form_tag recipes_path, class: "form-inline needs-validation form-homepage", novalidate: true, method: :get do %>
       <label class="sr-only" for="inline-location">Location</label>
       <div class="location-wrapper" id="inline-content">
         <i class="fas fa-map-marker-alt location-marker"></i>
         <%= text_field_tag :location, params[:location], class: "form-control mb-5 location-input-home float-left", placeholder: "Please enter a location", id: "pages_supermarket_address", style: "width: 250px" %>
-        
+
         <%= image_submit_tag "arrow_right.svg", class: "submit-home" %>
-        
-  
+
+
         <%#= submit_tag "Let's Go!", class: "btn btn-primary mb-5 btn-home" %>
       </div>
       <div class="invalid-feedback">Location can't be blank</div>
       <div class="valid-feedback">Looks good!</div>
-      
+
       <% end %>
-  
+
       <h1>Explore healthy and sustainable recipes with <strong style="color: #010059;">CookClever</strong></h1>
       <p style="opacity: 0.8">Find tasty recipes and save food from being wasted</p>
-  
+
     </div>
   </div>
 </div>
