updated basket design

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to root_path, class: "navbar-brand" do %>
     <div class="logo-background">
-      <%= image_tag "logo.svg", class: "logoNav" %>
+      <%= image_tag "logo_white.svg", class: "logoNav" %>
     </div>  
   <% end %>
 
