deleted some empty lines in basket show

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,4 +16,4 @@
 @import "components/card";
 @import "pages/index";
 @import "pages/home";
-@import "pages/basketshow"
+@import "pages/basket_show"
