testing email with welcome on production

--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,3 +1,18 @@
-<h1>Hello Luissa</h1>
+​
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+  </head>
+  <body>
+    <h1>Test</h1>
+  </body>
+</html>
+
+
+
+
+
+
 
 
