--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -57,10 +57,87 @@
 
       <% end %>
 
-      <h1>Explore healthy and sustainable recipes with <strong style="color: #010059;">CookClever</strong></h1>
+      <h1>Explore healthy and sustainable recipes with <strong style="color: #5A8F28;">CookClever</strong></h1>
       <p style="opacity: 0.8">Find tasty recipes and save food from being wasted</p>
 
     </div>
   </div>
 </div>
+
+<div class="container homepage-info">
+  <h1 class="info-title">How does CookClever work?</h1>
+  <div class="row row-cols-1 row-cols-md-3">
+  <div class="col mb-4">
+    <div class="card-info h-100">
+      <img src="https://res.cloudinary.com/dovh6vnvn/image/upload/v1597330343/Cookclever/laptop_qyhw3s.png" class="card-img-top" alt="Go online!">
+      <div class="card-body">
+        <h5 class="card-title">Go to the CookClever site</h5>
+        <p class="card-text">To start using this amazingly sustainable and tasty service, go to www.cookclever.xyz.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col mb-4">
+    <div class="card-info h-100">
+      <div class="card-body">
+        <img src="https://res.cloudinary.com/dovh6vnvn/image/upload/v1597330785/Cookclever/map_nwgthg.png" class="card-img-top" alt="Enter your location!">
+        <h5 class="card-title">Enter your location</h5>
+        <p class="card-text">Start browsing all the great recipes that have been generated just for you. <br>
+        Find supermarkets close by that offer bags full of the ingredients you need.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col mb-4">
+    <div class="card-info h-100">
+      <div class="card-body">
+        <img src="https://res.cloudinary.com/dovh6vnvn/image/upload/v1597331074/Cookclever/bag_oboghq.png" class="card-img-top" alt="Pick up your recipe">
+        <h5 class="card-title">Pick up your portion</h5>
+        <p class="card-text">After buying the recipe on our website, go and pick up your bag at your local supermarket and enjoy!.</p>
+      </div>
+    </div>
+  </div>
+</div>
+<br>
+<h2>... and thats how easy it is! Start saving food now!</h2>
+<br>
+
+<div class="row row-cols-1 row-cols-md-2">
+  <div class="col mb-4">
+    <div class="card">
+      <img src="https://res.cloudinary.com/dovh6vnvn/image/upload/v1597332291/Cookclever/Diagramm_vodkvw.png" class="card-img-top" alt="...">
+    </div>
+  </div>
+  <div class="col mb-4">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title"><strong style="color: #5A8F28;">1/3</strong> of the all food is <strong style="color: #5A8F28;">wasted</strong></h5>
+        <p class="card-text">Food is wasted everywhere along the value chain - from the field to the fork. And it's not only food that is wasted, but many, many resources that were used in the production of the food, be it water, soil or labour. This waste is bad for the environment. For example, for every kilo of bread not consumed, 1000 litres of water are wasted. Global food waste is responsible for 8% of greenhouse gas emissions.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
