--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,14 @@
 // Specific CSS for your home-page
 // Logo
+.info-title {
+  font-family: Nunito;
+  color: $bold-green;
+  margin: 24px 0px;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 32px;
+  font-weight: bold;
+}
+
 .banner-wrapper {
   text-align: center;
 }
@@ -13,11 +22,11 @@
   margin: 30vh 0 75px;
 }
 
-  
+
   .form-control {
-    color: #656565;  
+    color: #656565;
   }
-  
+
   .notice {
     display: none;
   }
@@ -94,3 +103,45 @@
   padding: 0;
   margin: 0;
  }
+
+.homepage-info {
+  margin-top: 16px;
+}
+
+.card-info {
+  background: rgba(185, 191, 165, 0.4);
+  border-radius: 4px;
+  border: 1px solid $olive;
+  h5 {
+    color: $green;
+    font-weight: bolder;
+  }
+
+  img {
+    margin-bottom: 8px;
+  }
+
+  p {
+    line-height: 24px;
+  }
+}
+
+h2 {
+    color: $green;
+  }
+
+.card {
+  border-radius: 4px;
+  border: 1px solid $olive;
+}
+
+p {
+  line-height: 32px;
+}
+
+
+
+
+
+
+
