--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -20,15 +20,10 @@
 
 @media(max-width: 992px) {
   .cards {
-    grid-template-columns: 1fr 1fr;
-  }
-}
-
-@media(max-width: 768px) {
-  .cards {
     grid-template-columns: 1fr;
   }
 }
+
 
 .card-title {
   color: white;
@@ -44,11 +39,13 @@
       font-size: 16px;
       font-weight: bold;
       margin: 0;
+      color: black;
     }
     p {
       font-size: 12px;
       opacity: .7;
       margin: 0;
+      line-height: 1.5;
     }
     .recipe-card-infos {
       padding: 8px 8px 0;
