--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -43,6 +43,7 @@
   .modal-body-info {
       width: 100%;
       height: 30px;
+      padding-left: 8px;
   }
 
   .modal-body-info-item {
@@ -56,12 +57,16 @@
   }
 
   .container-ingredients {
-    margin-top: 8px;
-    margin-left: 16px;
+    margin: 0;
+    h5 {
+      margin: 32px 0 0;
+      text-align: center;
+    }
   }
 
   .column-ingredients {
     width: 100%;
+    padding-left: 8px;
     .ingredient-wrapper {
       display: grid;
       grid-template-columns: 1fr 1fr;
