--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -69,20 +69,9 @@
                     <div class="modal-body-info-item"><%= price %> €</div>
                   </div>
 
-                  <%# <div class="container-ingredients">
-                    <div class="row">
-                      <div class="col">Column</div>
-                      <div class="col">Column</div>
-                      <div class="w-100"></div>
-                      <div class="col">Column</div>
-                      <div class="col">Column</div>
-                      <div class="w-100"></div>
-                      <div class="col">Column</div>
-                      <div class="col">Column</div>
-                    </div>
-                  </div> %>
-
+                  
                   <div class="container-ingredients">
+                    <h5><strong>Ingredients</strong></h5>
                     <div class="row row-ingredients">
                       <div class="column-ingredients">
                         <div class="ingredient-wrapper">
