--- a/app/views/baskets/show.html.erb
+++ b/app/views/baskets/show.html.erb
@@ -265,7 +265,7 @@
     </div>
 
     <div class="col-lg-4">
-      <div class="mb-3">
+      <div class="mb-3 total-amount">
           <div class="pt-4">
   
             <h5 class="mb-3">Total Amount</h5>
