basket logic implemented

--- a/app/assets/stylesheets/components/cards.scss
+++ b/app/assets/stylesheets/components/cards.scss
@@ -15,7 +15,7 @@
 
 }
 
-.order-card {
-  border-bottom: 1px solid black;
-  padding: 8px;
-}
+// .order-card {
+//   border-bottom: 1px solid black;
+//   padding: 8px;
+// }
