--- a/app/views/baskets/show.html.erb
+++ b/app/views/baskets/show.html.erb
@@ -1,17 +1,6 @@
 <div class="container mt-4 container-basket">
   <h2><strong>My Basket</strong></h2>
-    <h4>You'r almost there...</h4>
-    <div class="orders">
-      <% @orders.each do |order|%>
-        <div class="order-card">
-          <p class="order-title"><%= order.recipe.title %></p>
-          <% unless order.recipe.amounts.empty? %>
-          <p class="order-price"><%= order.recipe.amounts.first.ingredient.price %>€</p>
-          <% end %>
-        </div>
-      <% end %>
-    </div>
-
+    <h4>You're almost there...</h4>
 
   <div class="row">
     <div class="col-lg-8">
@@ -19,146 +8,70 @@
       <div class="mb-3">
         <div class="pt-4 wish-list">
 
-          <h5 class="mb-4">Cart (<span>2</span> items)</h5>
-
-          <div class="row mb-4">
-            <div class="col-md-5 col-lg-3 col-xl-3">
-              <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
-                <img class="img-fluid w-100"
-                  src="https://images.pexels.com/photos/4079520/pexels-photo-4079520.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Sample">
-              </div>
-            </div>
-            <div class="col-md-7 col-lg-9 col-xl-9">
-              <div>
-                <div class="d-flex justify-content-between">
-                  <div>
-                    <h5>Lasagne</h5>
-                    <p class="mb-3 text-uppercase small">You saved 4 ingredients from being thrown away</p>
-                    <%# <p class="mb-2 text-muted text-uppercase small">Color: blue</p>
-                    <p class="mb-3 text-muted text-uppercase small">Size: M</p> %>
+          <h5 class="mb-4">Cart (<span><%= @orders.count %></span> items)</h5>
+          <% @orders.each do |order|%>
+            <div class="order-card">
+              <div class="row mb-4">
+                <div class="col-md-5 col-lg-3 col-xl-3">
+                  <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
+                    <img class="img-fluid w-100"
+                      src="https://images.pexels.com/photos/4079520/pexels-photo-4079520.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Sample">
                   </div>
+                </div>
+                <div class="col-md-7 col-lg-9 col-xl-9">
                   <div>
-                    <div class="def-number-input number-input safari_only mb-0 w-100">
-                      <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
-                        class="minus decrease">
-                          <i class="fas fa-minus"></i>
-                        </button>
-                      <input class="quantity" min="0" name="quantity" value="1" type="number">
-                      <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()"
-                        class="plus increase">
-                          <i class="fas fa-plus"></i>
-                        </button>
+                    <div class="d-flex justify-content-between">
+                      <div>
+                        <h5><%= order.recipe.title %></h5>
+                        <% saved_ingredients = [] %>
+                        <% order.recipe.amounts.each do |amount| %>
+                          <% saved_ingredients << amount.ingredient %>
+                        <% end %>
+                        <p class="mb-3 text-uppercase small">You saved <%= saved_ingredients.size %> ingredients from being thrown away</p>
+                        <%# <p class="mb-2 text-muted text-uppercase small">Color: blue</p>
+                        <p class="mb-3 text-muted text-uppercase small">Size: M</p> %>
+                      </div>
+                      <div>
+                        <div class="def-number-input number-input safari_only mb-0 w-100">
+                          <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
+                            class="minus decrease">
+                              <i class="fas fa-minus"></i>
+                            </button>
+                          <input class="quantity" min="0" name="quantity" value="1" type="number">
+                          <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()"
+                            class="plus increase">
+                              <i class="fas fa-plus"></i>
+                            </button>
+                        </div>
+                        <%# <small id="passwordHelpBlock" class="form-text text-muted text-center">
+                          (Note, 1 piece)
+                        </small> %>
+                      </div>
                     </div>
-                    <%# <small id="passwordHelpBlock" class="form-text text-muted text-center">
-                      (Note, 1 piece)
-                    </small> %>
-                  </div>
-                </div>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div>
-                    <a href="#!" type="button" class="card-link-secondary small text-uppercase mr-3"><i
-                        class="fas fa-trash-alt mr-1"></i> Remove item </a>
-                  </div>
-                  <p class="mb-0"><span><strong id="summary">$17.99</strong></span></p class="mb-0">
-                </div>
-              </div>
-            </div>
-          </div>
-          <hr class="mb-4">
-
-
-          <div class="row mb-4">
-            <div class="col-md-5 col-lg-3 col-xl-3">
-              <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
-                <img class="img-fluid w-100"
-                  src="https://images.pexels.com/photos/4079520/pexels-photo-4079520.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Sample">
-              </div>
-            </div>
-            <div class="col-md-7 col-lg-9 col-xl-9">
-              <div>
-                <div class="d-flex justify-content-between">
-                  <div>
-                    <h5>Lasagne</h5>
-                    <p class="mb-3 text-uppercase small">You saved 4 ingredients from being thrown away</p>
-                    <%# <p class="mb-2 text-muted text-uppercase small">Color: blue</p>
-                    <p class="mb-3 text-muted text-uppercase small">Size: M</p> %>
-                  </div>
-                  <div>
-                    <div class="def-number-input number-input safari_only mb-0 w-100">
-                      <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
-                        class="minus decrease">
-                          <i class="fas fa-minus"></i>
-                        </button>
-                      <input class="quantity" min="0" name="quantity" value="1" type="number">
-                      <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()"
-                        class="plus increase">
-                          <i class="fas fa-plus"></i>
-                        </button>
+                    <div class="d-flex justify-content-between align-items-center">
+                      <div>
+<!--                         <a href="#!" type="button" class="card-link-secondary small text-uppercase mr-3"><i
+                            class="fas fa-trash-alt mr-1"></i> Remove item </a> -->
+                        <i class="fas fa-trash-alt mr-1"></i><%= link_to "Remove item", order_path(order), method: :delete, class: "card-link-secondary small text-uppercase mr-3"%>
+                      </div>
+                      <% unless order.recipe.amounts.empty? %>
+                        <% order_price = 0 %>
+                        <% order.recipe.amounts.each do |amount| %>
+                          <% order_price += amount.quantity * amount.ingredient.price %>
+                        <% end %>
+                        <p class="mb-0"><span><strong id="summary"><%= order_price %> €</strong></span></p class="mb-0">
+                      <% end %>
                     </div>
-                    <%# <small id="passwordHelpBlock" class="form-text text-muted text-center">
-                      (Note, 1 piece)
-                    </small> %>
                   </div>
-                </div>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div>
-                    <a href="#!" type="button" class="card-link-secondary small text-uppercase mr-3"><i
-                        class="fas fa-trash-alt mr-1"></i> Remove item </a>
-                  </div>
-                  <p class="mb-0"><span><strong id="summary">$17.99</strong></span></p class="mb-0">
                 </div>
               </div>
+              <hr class="mb-4">
             </div>
-          </div>
-          <hr class="mb-4">
+          <% end %>
 
+          <%= link_to "Go back to continue shopping...", recipes_path, class: "card-link-secondary small text-uppercase mr-3"%>
 
-          <div class="row mb-4">
-            <div class="col-md-5 col-lg-3 col-xl-3">
-              <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
-                <img class="img-fluid w-100"
-                  src="https://images.pexels.com/photos/4079520/pexels-photo-4079520.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Sample">
-              </div>
-            </div>
-            <div class="col-md-7 col-lg-9 col-xl-9">
-              <div>
-                <div class="d-flex justify-content-between">
-                  <div>
-                    <h5>Lasagne</h5>
-                    <p class="mb-3 text-uppercase small">You saved 4 ingredients from being thrown away</p>
-                    <%# <p class="mb-2 text-muted text-uppercase small">Color: blue</p>
-                    <p class="mb-3 text-muted text-uppercase small">Size: M</p> %>
-                  </div>
-                  <div>
-                    <div class="def-number-input number-input safari_only mb-0 w-100">
-                      <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
-                        class="minus decrease">
-                          <i class="fas fa-minus"></i>
-                        </button>
-                      <input class="quantity" min="0" name="quantity" value="1" type="number">
-                      <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()"
-                        class="plus increase">
-                          <i class="fas fa-plus"></i>
-                        </button>
-                    </div>
-                    <%# <small id="passwordHelpBlock" class="form-text text-muted text-center">
-                      (Note, 1 piece)
-                    </small> %>
-                  </div>
-                </div>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div>
-                    <a href="#!" type="button" class="card-link-secondary small text-uppercase mr-3"><i
-                        class="fas fa-trash-alt mr-1"></i> Remove item </a>
-                  </div>
-                  <p class="mb-0"><span><strong id="summary">$17.99</strong></span></p class="mb-0">
-                </div>
-              </div>
-            </div>
-          </div>
-          <hr class="mb-4">
-
-          <h5 class="mb-3">Please enter your pick-up time</h5>
+          <h5 class="mb-3 mt-3">Please enter your pick-up time</h5>
 
 
           <form class="form-inline">
@@ -166,15 +79,15 @@
             <input type="date" class="form-control mr-3 mb-3" id="inline-date" required>
             <div class="invalid-feedback">Please provide a valid value.</div>
             <div class="valid-feedback">Looks good!</div>
-          
+
             <label class="sr-only" for="inline-time">Start-Time</label>
             <input type="time" class="form-control mr-3 mb-3" id="inline-time" required>
             <div class="invalid-feedback">Please provide a valid value.</div>
             <div class="valid-feedback">Looks good!</div>
-                 
+
             <button type="submit" class="btn btn-primary mb-3">Submit</button>
           </form>
-        
+
           <p class="text-primary mb-0"><i class="fas fa-info-circle mr-1"></i> Do not delay the purchase, adding
             items to your cart does not mean booking them.</p>
 
@@ -261,19 +174,26 @@
       </div>
 
       <%# Payment Form %>
-  
+
     </div>
 
     <div class="col-lg-4">
       <div class="mb-3 total-amount">
           <div class="pt-4">
-  
+            <% total_basket_price = 0 %>
+            <% @orders.each do |order| %>
+              <% order_price = 0 %>
+              <% order.recipe.amounts.each do |amount| %>
+                <% order_price += amount.quantity * amount.ingredient.price %>
+              <% end %>
+              <% total_basket_price += order_price %>
+            <% end %>
             <h5 class="mb-3">Total Amount</h5>
-  
+
             <ul class="list-group list-group-flush">
               <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                 Temporary amount
-                <span>$25.98</span>
+                <span> <%= total_basket_price %> €</span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                 Delivery Costs
@@ -299,15 +219,15 @@
                 </strong></span>
               </li>
             </ul>
-  
+
             <button type="button" class="btn btn-primary btn-block"><strong>Buy</strong></button>
-  
+
           </div>
         </div>
-    </div>  
+    </div>
 
   </div>
-</div>  
+</div>
 
 
 
@@ -315,7 +235,7 @@
 
 
 
-<%# 
+<%#
 
 <div class="row">
         <div class="col-lg-6 mx-auto">
