--- a/app/views/baskets/show.html.erb
+++ b/app/views/baskets/show.html.erb
@@ -57,7 +57,7 @@
                       <% unless order.recipe.amounts.empty? %>
                         <% order_price = 0 %>
                         <% order.recipe.amounts.each do |amount| %>
-                          <% order_price += amount.quantity * amount.ingredient.price %>
+                            <% order_price += amount.ingredient.price %>
                         <% end %>
                         <p class="mb-0"><span><strong id="summary"><%= order_price %> €</strong></span></p class="mb-0">
                       <% end %>
@@ -180,20 +180,18 @@
     <div class="col-lg-4">
       <div class="mb-3 total-amount">
           <div class="pt-4">
-            <% total_basket_price = 0 %>
+            <% total = 0 %>
             <% @orders.each do |order| %>
-              <% order_price = 0 %>
               <% order.recipe.amounts.each do |amount| %>
-                <% order_price += amount.quantity * amount.ingredient.price %>
+                <% total += amount.ingredient.price %>
               <% end %>
-              <% total_basket_price += order_price %>
             <% end %>
             <h5 class="mb-3">Total Amount</h5>
 
             <ul class="list-group list-group-flush">
               <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                 Temporary amount
-                <span> <%= total_basket_price %> €</span>
+                <span> <%= total %> €</span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                 Delivery Costs
