--- a/app/views/baskets/show.html.erb
+++ b/app/views/baskets/show.html.erb
@@ -14,8 +14,9 @@
               <div class="row mb-4">
                 <div class="col-md-5 col-lg-3 col-xl-3">
                   <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
-                    <img class="img-fluid w-100"
-                      src="https://images.pexels.com/photos/4079520/pexels-photo-4079520.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Sample">
+<!--                     <img class="img-fluid w-100"
+                      src="https://images.pexels.com/photos/4079520/pexels-photo-4079520.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Sample"> -->
+                    <%= cl_image_tag order.recipe.photo.key, height: 100, width: 150, crop: :fill %>
                   </div>
                 </div>
                 <div class="col-md-7 col-lg-9 col-xl-9">
