--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,6 +2,6 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
-@import "cards";
 @import "map";
-@import "footer"
+@import "footer";
+@import "card"
