--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,18 +1,13 @@
-​
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
-  </head>
-  <body>
-    <h1>Test</h1>
-  </body>
+<p>Hi Lotta,</p>
+<p>thank you for your order!</p>
+<br>
+<p>You have purchased these products:</p>
+
+
+<img src="https://res.cloudinary.com/dovh6vnvn/image/upload/v1597398899/Download_k81nfj.png" alt="2453-7853-2680-2384">
+<br>
+<p>Enjoy your food and have a nice day,</p>
+<p>Your Cookclever Team</p>
+
 </html>
-
-
-
-
-
-
-
-
