--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -108,7 +108,7 @@
     </div>
     <div class="col mb-4">
       <div class="card">
-        <div class="card-body">
+        <div class="card-body" id="wasted">
           <h5 class="card-title"><strong style="color: #5A8F28;">1/3</strong> of the all food is <strong style="color: #5A8F28;">wasted</strong></h5>
           <p class="card-text">Food is wasted everywhere along the value chain - from the field to the fork. And it's not only food that is wasted, but many, many resources that were used in the production of the food, be it water, soil or labour. This waste is bad for the environment. For example, for every kilo of bread not consumed, 1000 litres of water are wasted. Global food waste is responsible for 8% of greenhouse gas emissions.</p>
         </div>
