--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -2,6 +2,9 @@
   <%# @reservation = Reservation.new %>
   <div class="row">
     <div class="column">
+      <div>
+        <h4 class="mt-3 mb-0">There are <strong style="color: #5A8F28;"><%= @recipes.count %></strong> recipes available around you!</h4>
+      </div>
       <div class="cards">
         <% n = 0  %>
         <% @recipes.each do |recipe|%>
