number of items in basket

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -7,5 +7,5 @@ $body-color: $gray;
 $green:      #90B46A;
 $bold-green: #5A8F28;
 $olive:      #B9BEA5;
-$red:        #D9674E;
+$red:        #FF4C41;
 $orange:     #F2CB80;
