--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -29,8 +29,12 @@
   margin: 0;
  }
 
- .basket-icon {
-  margin: 8px 16px;
+.basket {
+  position: relative;
+}
+.basket-icon {
+  margin: 8px 28px;
+  font-size: 24px;
  }
 
  .fas {
@@ -41,6 +45,21 @@
     transition-duration: 0.2s;
   }
  }
+
+.number-of-items {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 5px;
+  right: 21px;
+  background-color: $red;
+  color: $light-gray;
+  font-size: 10px;
+  width: 16px;
+  height: 16px;
+  border-radius: 8px;
+}
 
 //  Navbar Home
 
