--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <%= link_to root_path, class: "navbar-brand" do %>
     <div class="logo-background">
       <%= image_tag "logo_white.svg", class: "logoNav" %>
-    </div>  
+    </div>
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,11 +13,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <%= link_to basket_path(@basket) do %>
-          <li class="basket-icon">
-          <i class="fas fa-shopping-cart"></i>
-          </li>
+        <div class="basket">
+          <%= link_to basket_path(@basket) do %>
+            <p class="basket-icon">
+              <i class="fas fa-shopping-cart"></i>
+            </p>
           <% end %>
+          <p class="number-of-items">
+            <%= @basket.orders.count %>
+          </p>
+        </div>
         <li class="nav-item dropdown">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/LSchemuth", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
